--- a/bloodmallet/general_website/templates/general_website/index.html
+++ b/bloodmallet/general_website/templates/general_website/index.html
@@ -36,7 +36,7 @@
 
 {% block content %}
 
-<h1 class="display-4 text-center" id="primary_headline">blood{% if not bloodyfiller %}mallet{% else %}y( {{bloodyfiller}} ){% endif %}</h1>
+<h1 class="display-4 text-center" id="primary_headline">bloodmallet</h1>
 
 {% comment %}
     {% if not request.user.is_authenticated %}
@@ -116,6 +116,9 @@ are an entry point. For indepth information about your spec use your theorycraft
 
 <div id="chart" hidden></div>
 
+{% endblock %}
+
+{% block extraimport %}
 <script src="{% static 'general_website/js/navbar_class_menu.js' %}"></script>
 <script src="{% static 'general_website/js/class_spec_table.js' %}"></script>
 <script src="{% static 'general_website/js/chart_options.js' %}"></script>
