--- a/bloodmallet/general_website/templates/general_website/layout/nav_bottom.html
+++ b/bloodmallet/general_website/templates/general_website/layout/nav_bottom.html
@@ -23,6 +23,7 @@
                 <span>{% trans "Report an error" %}</span>
                 </a>
             </li>
+            {% if not user.is_superuser %}
             <li class="nav-item patron-link">
                 <a class="nav-link" href="https://www.patreon.com/bloodmallet">
                 <svg class="svg-icon">
@@ -31,6 +32,7 @@
                 <span style="color: #F96854;">{% trans "Patreon" %}</span>
                 </a>
             </li>
+            {% endif %}
             <li class="nav-item">
                 <a class="nav-link" href="https://twitter.com/bloodmallet">
                 <div class="svg-icon">
