--- a/bloodmallet/general_website/templates/general_website/login.html
+++ b/bloodmallet/general_website/templates/general_website/login.html
@@ -11,7 +11,7 @@
     {% comment %} Add reset PW link here {% endcomment %}
 
     <button type="submit" class="btn btn-primary">{% trans "Login" %}</button>
-    <small id="dataDisclaimer" class="form-text text-muted">{% trans "I couldn't care less about your data. Nothing is shared with others and data is wiped regularly." %}</small>
+    <small id="dataDisclaimer" class="form-text text-muted">{% trans "I couldn't care less about what you enter. Nothing is shared with others and data is wiped regularly." %}</small>
 </form>
 
 {% endblock %}
