--- a/bloodmallet/general_website/templates/general_website/signup.html
+++ b/bloodmallet/general_website/templates/general_website/signup.html
@@ -9,7 +9,7 @@
     {{ signup_form|crispy }}
 
     <button type="submit" class="btn btn-primary">{% trans "Sign up" %}</button>
-    <small id="dataDisclaimer" class="form-text text-muted">{% trans "I couldn't care less about your data. Nothing is shared with others and data is wiped regularly." %}</small>
+    <small id="dataDisclaimer" class="form-text text-muted">{% trans "I couldn't care less about what you enter. Nothing is shared with others and data is wiped regularly." %}</small>
 </form>
 
 {% endblock %}
