--- a/bloodmallet/general_website/templates/general_website/layout/nav_top.html
+++ b/bloodmallet/general_website/templates/general_website/layout/nav_top.html
@@ -16,8 +16,13 @@
 
             <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link translate_general" href="{% url 'index' %}" id="general_link">{% trans "General" %}</a>
+                <a class="nav-link" href="{% url 'index' %}" id="general_link">{% trans "General" %}</a>
             </li>
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'my_charts' %}" id="my_charts_link">{% trans "My Charts" %}</a>
+            </li>
+            {% endif %}
             </ul>
 
 
