add wow_class borders

--- a/bloodmallet/general_website/static/general_website/css/base.scss
+++ b/bloodmallet/general_website/static/general_website/css/base.scss
@@ -219,6 +219,11 @@ a:hover .svg-icon {
             transition: border .0s ease-in;
         }
     }
+
+    .border-#{$class} {
+        border-color: $color-value !important;
+    }
+
 }
 
 // Styles for the class-spec table
