--- a/bloodmallet/general_website/templates/general_website/my_charts.html
+++ b/bloodmallet/general_website/templates/general_website/my_charts.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h1>{% trans 'My Charts' %}</h1>
+<h1>{% trans 'My Charts' %}{% if queries %} <small class="text-muted">In query: {{ queries }}</small>{% endif %}</h1>
 
 <p>{% trans 'A list of your own charts' %}</p>
 
