--- a/bloodmallet/general_website/templates/general_website/my_charts.html
+++ b/bloodmallet/general_website/templates/general_website/my_charts.html
@@ -21,21 +21,88 @@
     </div>
 
     {% for chart in charts %}
-    <div class="col-4">
+    <div class="col-4" id="card_{{ chart.uuid }}">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">{{ chart.name }}</h5>
                 <h6 class="card-subtitle mb-2 text-muted">{{ chart.result.created_at }}</h6>
-                <p class="card-text">{{ chart.simulation_type }}</p>
-                <p class="card-text">{{ chart.wow_spec }} {{ chart.wow_class }}</p>
-                <p class="card-text">{{ chart.fight_style }}</p>
-                <a href="{% url 'chart' chart.uuid %}" class="btn btn-primary">{% trans 'Load Chart' %}</a>
-                <a href="{% url 'delete_chart' chart.uuid %}"
-                    class="btn btn-primary">{% trans 'Delete Chart' %}</a>
+                <p class="card-text">{{ chart.simulation_type }} {{ chart.fight_style }}<br/>
+                {{ chart.wow_spec.name }} {{ chart.wow_class }}</p>
+                <a href="{% url 'chart' chart.uuid %}" class="btn btn-primary">{% trans 'View' %}</a>
+                <button class="btn btn-outline-danger delete_button" data-toggle="modal" data-target="#deleteModal" data-value="{{ chart.uuid }}" id="delete_button_{{ chart.uuid }}">{% trans 'Delete' %}</button>
             </div>
         </div>
     </div>
     {% endfor %}
 </div>
 
+
+
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="deleteModalLabel">{% trans 'Delete Chart and Simulation data' %}</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <p>{% trans 'Are you sure you want to delete this chart? All associated data will be gone, too.' %}</p>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-danger" id="real_delete_button" value="">{% trans 'Delete' %}</button>
+            <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+        </div>
+        </div>
+    </div>
+</div>
+
+{% endblock %}
+
+{% block extraimport %}
+<script>
+
+    $('#deleteModal').on('show.bs.modal', function (event) {
+        var button = $(event.relatedTarget); // Button that triggered the modal
+        var chart_id = button.data('value');
+        $('#real_delete_button').val(chart_id);
+        $('#real_delete_button').removeClass('disabled');
+        $('#real_delete_button').click(function() {
+            delete_chart($('#real_delete_button'));
+        });
+    })
+
+    function delete_chart(element) {
+        element.off("click");
+        element.addClass('disabled');
+        element.html("{% trans 'Deleting' %}");
+
+        let chart_id = element.val();
+        let url = "{% url 'delete_chart' %}";
+        let data = {
+            'csrfmiddlewaretoken': '{{ csrf_token }}',
+            'chart_id': chart_id,
+        };
+
+        let original_button = $('#delete_button_' + chart_id);
+        original_button.html("{% trans 'Deleting' %}");
+        original_button.addClass('disabled');
+        original_button.off("click");
+
+        $.post(url, data, function(response){
+            if (response['status'] === "success") {
+                element.html("{% trans 'Deleted' %}");
+                $('#card_' + chart_id).children('.card:first').addClass('border-danger');
+                $('#deleteModal').modal('hide');
+                $('#card_' + chart_id).hide(1500, function() {});
+            } else {
+                element.html("{% trans 'Error' %}");
+                original_button.html("{% trans 'Error' %}");
+                console.error(response['message']);
+            }
+        });
+    }
+
+</script>
 {% endblock %}
