--- a/bloodmallet/general_website/templates/general_website/chart.html
+++ b/bloodmallet/general_website/templates/general_website/chart.html
@@ -11,7 +11,7 @@
 <p>{% trans 'Author' %}: {{ chart.user }}</p>
 
 
-<div id="chart" class="bloodmallet_chart" data-wow-class="shaman" data-wow-spec="elemental" data-chart-id="{{ chart.uuid }}" data-language="{{ LANGUAGE_CODE }}"></div>
+<div id="chart" class="bloodmallet_chart" data-chart-id="{{ chart.uuid }}" data-language="{{ LANGUAGE_CODE }}" data-entries="100"></div>
 
 
 {% endblock %}
