add max entry number to index

--- a/bloodmallet/general_website/templates/general_website/index.html
+++ b/bloodmallet/general_website/templates/general_website/index.html
@@ -108,7 +108,7 @@ are an entry point. For indepth information about your spec use your theorycraft
     </div>
 </div>
 
-<div id="chart" hidden></div>
+<div id="chart" data-entries="100" hidden></div>
 
 {% endblock %}
 
