--- a/bloodmallet/general_website/templates/general_website/layout/base.html
+++ b/bloodmallet/general_website/templates/general_website/layout/base.html
@@ -13,7 +13,7 @@
     {% if not user.is_superuser %}
     <div class="patreon-div">
         <a href="https://www.patreon.com/bloodmallet">
-            <img src="{% static 'general_website/assets/become_a_patron_button.png' %}" alt="{% trans 'Become a Patron' %}" button" height="42" style="vertical-align: text-top;" />
+            <img src="{% static 'general_website/assets/become_a_patron_button.png' %}" alt="{% trans 'Become a Patron' %}" height="42" style="vertical-align: text-top;" />
         </a>
     </div>
     {% endif %}
