--- a/bloodmallet/general_website/templates/general_website/layout/nav_bottom.html
+++ b/bloodmallet/general_website/templates/general_website/layout/nav_bottom.html
@@ -13,7 +13,7 @@
 
             <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="faq.html">{% trans "FAQ" %}</a>
+                <a class="nav-link" href="{% url 'FAQ' %}">{% trans "FAQ" %}</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="https://github.com/Bloodmallet/bloodmallet.github.io/issues">
