add information to index

--- a/bloodmallet/general_website/templates/general_website/index.html
+++ b/bloodmallet/general_website/templates/general_website/index.html
@@ -38,6 +38,12 @@
 
 <h1 class="display-4 mb-3 text-center" id="primary_headline">bloodmallet</h1>
 
+
+<div class="alert alert-info" role="alert">
+    <strong>{% trans 'This development page is slow to save cost. Data generation is done at full speed, though.' %}</strong>
+</div>
+
+
 <p id="translate_main_paragraph">
 {% blocktrans %}
 This site provides an overview about trinkets, azerite traits, and others for almost all specs in World of Warcraft
