make easier to read

--- a/bloodmallet/general_website/templates/general_website/index.html
+++ b/bloodmallet/general_website/templates/general_website/index.html
@@ -40,7 +40,7 @@
 
 
 <div class="alert alert-info" role="alert">
-    <strong>{% trans 'This development page is slow to save cost. Data generation is done at full speed, though.' %}</strong>
+    {% trans 'This development page is slow to save cost. Data generation is done at full speed, though.' %}
 </div>
 
 
