--- a/bloodmallet/general_website/templates/general_website/layout/base.html
+++ b/bloodmallet/general_website/templates/general_website/layout/base.html
@@ -29,6 +29,9 @@
                 </div>
                 <div class="col-xl-8 col-lg-8 col-md-10">
                     <div class="pt-3"></div>
+                    <div class="alert alert-info text-center" role="alert">
+                        {% trans 'alpha alpha alpha alpha alpha alpha alpha alpha alpha alpha alpha alpha alpha alpha' %}
+                    </div>
                     {% include 'general_website/layout/messages.html' %}
                     {% block content %}
                     {% endblock %}
