--- a/bloodmallet/general_website/templates/general_website/add_chart.html
+++ b/bloodmallet/general_website/templates/general_website/add_chart.html
@@ -6,12 +6,13 @@
 
 <h1>{% trans 'Create a Chart' %}</h1>
 
-<div class="alert alert-warning" role="alert">
-    <strong>{% trans 'Warning' %}</strong>
-    <p>{% trans 'Due to a rather massive change in backend no azerite ITEM charts are currently available. It\'s on my todo list!' %}</p>
-</div>
+<p class="alert-warning">{% trans 'Due to a rather massive change in backend no azerite ITEM charts are currently available. It\'s on my todo list!' %}</p>
 
-<form method="post" action="{% url 'add_charts' %}">
+{% if not user.can_create_chart %}
+<p class="alert-warning">{% trans 'You lack permission to create charts.' %}</p>
+{% endif %}
+
+<form method="post" {% if user.can_create_chart %}action="{% url 'add_charts' %}"{% endif %}>
     {% crispy form %}
 
     <small id="dataDisclaimer" class="form-text text-muted">{% trans "Chart creation will take a while (stuff needs to be simulated)." %}</small>
