try to enable logging for allauth (monkeypatch)

--- a/bloodmallet/general_website/templates/allauth/socialaccount/authentication_error.html
+++ b/bloodmallet/general_website/templates/allauth/socialaccount/authentication_error.html
@@ -8,4 +8,8 @@
 <h1>{% trans "Social Network Login Failure" %}</h1>
 
 <p>{% trans "An error occurred while attempting to login via your social network account." %}</p>
+<p>{{ auth_error }}</p>
+<p>Code: {{ auth_error.code }}</p>
+<p>Error: {{ auth_error.exception }}</p>
+
 {% endblock %}
