--- a/general_website/templates/allauth/socialaccount/connections.html
+++ b/general_website/templates/allauth/socialaccount/connections.html
@@ -19,29 +19,30 @@
 {% endif %}
 
 {% for base_account in form.accounts %}
-{% with base_account.get_provider_account as account %}
-<div>
-<label for="id_account_{{ base_account.id }}">
-<input id="id_account_{{ base_account.id }}" type="radio" name="account" value="{{ base_account.id }}"/>
-<span class="socialaccount_provider {{ base_account.provider }} {{ account.get_brand.id }}">{{account.get_brand.name}}</span>
-{{ account }}
-</label>
-</div>
-{% endwith %}
+    {% with base_account.get_provider_account as account %}
+        <div class="form-check">
+            <label for="id_account_{{ base_account.id }}" class="form-check-label">
+                <input id="id_account_{{ base_account.id }}" type="radio" name="account" value="{{ base_account.id }}" class="form-check-input" {% if account.get_brand.name == "Patreon" %}checked{% endif %}/>
+                <span class="socialaccount_provider {{ base_account.provider }} {{ account.get_brand.id }}">{{account.get_brand.name}}</span>:
+                {{ user.patron_name }}
+                {% if user.patron_tier %}
+                    (<span class="{% if user.patron_tier == 'Uncommon' %}monk-color{% elif user.patron_tier == 'Rare' %}mage-color{% elif user.patron_tier == 'Epic' %}warlock-color{% endif %}">{{ user.patron_tier }}</span>)
+                {% endif %}
+            </label>
+        </div>
+    {% endwith %}
 {% endfor %}
-
-<div>
 <button type="submit" class="btn btn-primary">{% trans 'Remove' %}</button>
-</div>
 
 </fieldset>
-
 </form>
 
 {% else %}
 <p>{% trans 'You currently have no social network accounts connected to this account.' %}</p>
 {% endif %}
 
+
+<br/><br/><br/>
 <h2>{% trans 'Add a 3rd Party Account' %}</h2>
 
 <ul class="socialaccount_providers">
