--- a/general_website/templates/allauth/socialaccount/connections.html
+++ b/general_website/templates/allauth/socialaccount/connections.html
@@ -8,7 +8,7 @@
 <h1>{% trans "Account Connections" %}</h1>
 
 {% if form.accounts %}
-<p>{% blocktrans %}You can sign in to your account using any of the following third party accounts:{% endblocktrans %}</p>
+<p>{% blocktrans %}Your account is connected to the following 3rd Party Accounts:{% endblocktrans %}</p>
 
 <form method="post" action="{% url 'socialaccount_connections' %}">
 {% csrf_token %}
@@ -38,7 +38,7 @@
 </form>
 
 {% else %}
-<p>{% trans 'You currently have no social network accounts connected to this account.' %}</p>
+<p>{% trans 'You currently have no 3rd Party Accounts connected to this account.' %}</p>
 {% endif %}
 
 
