--- a/general_website/templates/general_website/chart.html
+++ b/general_website/templates/general_website/chart.html
@@ -7,11 +7,10 @@
 
 <h1 class=" display-4 mb-3 text-center">{% trans 'bloodmallet' %}</h1>
 
-{% if chart.name %}<h3>{{ chart.name }}</h3>{% endif %}
-<p>{% trans 'Author' %}: {{ chart.user }}</p>
+<h3>{% trans 'Title' %}: <span id="title">~</span></h3>
+<p>{% trans 'Author' %}: <span id="name">~</span></p>
 
-
-<div id="chart" class="bloodmallet_chart" data-chart-id="{{ chart.uuid }}" data-language="{{ LANGUAGE_CODE }}" data-entries="100" data-background-color="transparent"></div>
+<div id="chart" class="bloodmallet_chart" data-chart-id="{{ chart_id }}" data-language="{{ LANGUAGE_CODE }}" data-entries="100" data-background-color="transparent"></div>
 
 
 {% endblock %}
