--- a/general_website/templates/general_website/layout/chart_import.html
+++ b/general_website/templates/general_website/layout/chart_import.html
@@ -1,4 +1,4 @@
 {% load static %}
-
 <script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/highcharts-3d.js"></script>
 <script src="{% static 'general_website/js/bloodmallet_chart_import.js' %}"></script>
