--- a/general_website/templates/general_website/index.html
+++ b/general_website/templates/general_website/index.html
@@ -66,7 +66,7 @@ are an entry point. For indepth information about your spec use your theorycraft
                 <option value="trinkets" selected>{% trans "Trinkets" %}</option>
                 <option value="azerite">{% trans "Azerite" %}</option>
                 <option value="races">{% trans "Races" %}</option>
-                {% comment %} <option value="secondary_distributions">Secondary distributions</option> {% endcomment %}
+                <option value="secondary_distributions">Secondary distributions</option>
             </select>
         </div>
         <div class="col-md-6 col-xl-4 bottom-spacer">
