--- a/general_website/static/general_website/css/base.scss
+++ b/general_website/static/general_website/css/base.scss
@@ -390,3 +390,26 @@ select::-ms-expand {
 .alert {
     font-weight: 600;
 }
+
+.cookie_information_overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: $light-color;
+    opacity: 0.7;
+    z-index: 1250;
+}
+
+.centered-axis-xy {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.cookie_box {
+    z-index: 1255;
+    background-color: $dark-color;
+}
