--- a/general_website/templates/general_website/faq.html
+++ b/general_website/templates/general_website/faq.html
@@ -34,60 +34,60 @@
 <div class="offset-md-1 col-md-10">
     <h2 id="generation-settings" class="faq-question">What settings are used to create the data?</h2>
     <table class="table">
-    <thead>
-        <tr>
-        <th scope="col">Setting</th>
-        <th scope="col">Patchwerk</th>
-        <th scope="col">HecticAddCleave</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-        <th scope="row">Profile/Tier</th>
-        <td>Dazar'Alor(T23)</td>
-        <td>Dazar'Alor(T23)</td>
-        </tr>
-        <tr>
-        <th scope="row">Iterations</th>
-        <td>20000 (sufficient to reach target_error)</td>
-        <td>20000 (sufficient to reach target_error)</td>
-        </tr>
-        <tr>
-        <th scope="row">Target Error</th>
-        <td>0.2%</td>
-        <td>0.2%</td>
-        </tr>
-        <tr>
-        <th scope="row">Max Time</th>
-        <td>300 seconds</td>
-        <td>300 seconds</td>
-        </tr>
-        <tr>
-        <th scope="row">Vary Combat Length</th>
-        <td>20%</td>
-        <td>20%</td>
-        </tr>
-        <tr>
-        <th scope="row">Fixed Time</th>
-        <td>true</td>
-        <td>true</td>
-        </tr>
-        <tr>
-        <th scope="row">Default Actions</th>
-        <td>true</td>
-        <td>true</td>
-        </tr>
-        <tr>
-        <th scope="row">Optimize Expressions</th>
-        <td>true</td>
-        <td>true</td>
-        </tr>
-        <tr>
-        <th scope="row">Ready Trigger</th>
-        <td>true</td>
-        <td>true</td>
-        </tr>
-    </tbody>
+        <thead>
+            <tr>
+            <th scope="col">Setting</th>
+            <th scope="col">Patchwerk</th>
+            <th scope="col">HecticAddCleave</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">Profile/Tier</th>
+                <td>T25 (Ny'alotha)</td>
+                <td>T25 (Ny'alotha)</td>
+            </tr>
+            <tr>
+                <th scope="row">Iterations</th>
+                <td>20000 (sufficient to reach target_error)</td>
+                <td>20000 (sufficient to reach target_error)</td>
+            </tr>
+            <tr>
+                <th scope="row">Target Error</th>
+                <td>0.1%</td>
+                <td>0.1%</td>
+            </tr>
+            <tr>
+                <th scope="row">Max Time</th>
+                <td>300 seconds</td>
+                <td>300 seconds</td>
+            </tr>
+            <tr>
+                <th scope="row">Vary Combat Length</th>
+                <td>20%</td>
+                <td>20%</td>
+            </tr>
+            <tr>
+                <th scope="row">Fixed Time</th>
+                <td>true</td>
+                <td>true</td>
+            </tr>
+            <tr>
+                <th scope="row">Default Actions</th>
+                <td>true</td>
+                <td>true</td>
+            </tr>
+            <tr>
+                <th scope="row">Optimize Expressions</th>
+                <td>true</td>
+                <td>true</td>
+            </tr>
+            <tr>
+                <th scope="row">Ready Trigger</th>
+                <td>true</td>
+                <td>true</td>
+            </tr>
+        </tbody>
     </table>
 </div>
 <div class="offset-md-1 col-md-10">
