add temp plausible

--- a/general_website/templates/general_website/layout/script_importer.html
+++ b/general_website/templates/general_website/layout/script_importer.html
@@ -57,3 +57,5 @@
         activateGA();
     }
 </script>
+
+<script async defer data-domain="dev.bloodmallet.com" src="https://plausible.io/js/plausible.js"></script>
