rename add_charts to create_chart to match url, remove comments from /simc input

--- a/general_website/templates/general_website/my_charts.html
+++ b/general_website/templates/general_website/my_charts.html
@@ -15,7 +15,7 @@
         <div class="card text-center h-100">
             <div class="card-body">
                 <h5 class="card-title">{% trans 'New Chart' %}</h5>
-                <a href="{% url 'add_charts' %}" class="btn btn-primary mt-3 pt-3 pb-3 pl-4 pr-4">+</a>
+                <a href="{% url 'create_chart' %}" class="btn btn-primary mt-3 pt-3 pb-3 pl-4 pr-4">+</a>
             </div>
         </div>
     </div>
