fix cookie disclaimer

--- a/general_website/templates/general_website/layout/base.html
+++ b/general_website/templates/general_website/layout/base.html
@@ -57,7 +57,7 @@
     {# Cookie Policy overlay #}
     <div id="cookie_information_overlay" class="cookie_information_overlay" hidden>
     </div>
-    <div id="cookie_information_box" class="centered-axis-xy cookie_box alert alert-info" hidden>
+    <div id="cookie_information_box" class="centered-axis-xy cookie_box alert alert-info" style="position: fixed;" hidden>
         <p>
             {% blocktrans %}
             Greetings,<br/>
